# ButtonRemap

./: .gitignore  .replit  BUILD_INSTRUCTIONS.md  CLAUDE.md  LICENSE  README.md  RUST_BACKEND_REFERENCE.md  build.bat  build.ps1  dev.bat  package-lock.json  package.json  package.tauri.json  replit.md  setup-tauri.ps1  setup-tauri.sh  tailwind.config.tauri.cjs  vite.config.tauri.ts  vite.config.ts  wdio.conf.ts
.serena/: project.yml
attached_assets/: Pasted--USB-Configurator-Build-Script--1764370810414_1764370810415.txt  documentation_USB_tool.md_1764363698142.txt
client/: index.html
client/src/: App.tsx  index.css
client/src/lib/: tauri-bridge.ts
client/src/pages/: dashboard.tsx  state1_no_mapping.tsx  state2_configured.tsx
client/src/types/: tauri.d.ts
playwright-report/: index.html
shared/: ipc.ts  presets.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  config.rs  hid.rs  hotkey.rs  input_monitor.rs  listener.rs  main.rs  rawinput.rs  types.rs
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-app/src-tauri/src/: main.rs
tests/e2e/: app.spec.ts
tests/tauri/: app.e2e.ts  full-e2e.test.ts  smoke.test.ts  tauri-playwright.test.ts  ui-automation.test.ps1
